.vitepress/theme/lhm.css
:root {
    --vp-c-brand-1: #ffcc01;
    --vp-c-brand-2: var(--vp-c-brand-1);
    --vp-c-brand-3: var(--vp-c-brand-1);
    --vp-c-brand-soft: var(--vp-c-brand-1);

    --muc-background: url("https://it-at-m.github.io/opensource.muenchen.de/assets/backgrounds/city_day.jpg")
}

.dark {
    --muc-background: url("https://it-at-m.github.io/opensource.muenchen.de/assets/backgrounds/wheel_night.jpg");
}

body {
    background-image: var(--muc-background);
    background-attachment: fixed;
    background-size: cover;
}

.VPDoc > .container {
    background-color: color-mix(in srgb, var(--vp-c-bg-soft), transparent 15%);
    border-radius: 32px;
    padding-top: 32px;
    margin-bottom: 32px;
    backdrop-filter: blur(8px);
}

.aside-curtain {
    background: none !important;
}

@media all and (max-width: 768px){

    .VPDoc {
        padding: 0 !important;
    }

    .VPDoc > .container {
        border-radius: unset;
        padding: 32px;
    }
}

h1:not(.title, .name),
h2:not(.title),
h3:not(.title),
h4:not(.title),
h5:not(.title),
h6:not(.title) {
    padding: 5px 12px;
    background-color: var(--vp-c-brand-1);
    color: #2d2d25;
    display: inline-block !important;
    width: auto !important;
}

h1 .header-anchor,
h2 .header-anchor,
h3 .header-anchor,
h4 .header-anchor,
h5 .header-anchor,
h6 .header-anchor {
    top: 5px !important;
}

